Fix graphical bug on mobile view (#369)

--- a/component-lib/src/organisms/FeatureBoxes/FeatureBoxes.pcss
+++ b/component-lib/src/organisms/FeatureBoxes/FeatureBoxes.pcss
@@ -12,6 +12,7 @@
         padding: 2rem;
         text-align: center;
         width: 100%;
+        display: block;
 
         @media (min-width: 39.5em) {
             flex-basis: 48%;
